--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,40 +1,58 @@
- #particles-js{
-            width: 100vw;
-            height: 100vh;
-        }
-        body{
-            margin: 0px;
-            overflow: hidden;
-            background-color: #373955;
-        }
-        .card{
-          background-color:#0c0c0cef;
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          padding: 10px;
-          padding-top: 5px;
-          font-family: sans-serif;
-          text-align: center;
-          border-radius: 5px;
-          max-width: 350px;
-        }
-        .card h1,p,h2,h3{
-           color: white;
-        }
-        h3{
-		color: white;
-	}
-        button{
-            border-radius: 2px;
-            border-style: solid;
-            border-color: white;
-			border-width: thin;
-			color: white;
-			padding: 2px;
-            background-color: black;
-        }
-		.card .Buttons{
-			padding: 10px;
-		}
+ #particles-js {
+     width: 100vw;
+     height: 100vh;
+ }
+
+ body {
+     margin: 0px;
+     overflow: hidden;
+     background-color: #373955;
+ }
+
+ .card {
+     background-color: #0c0c0cef;
+     position: absolute;
+     left: 50%;
+     top: 50%;
+     transform: translate(-50%, -50%);
+     padding: 10px;
+     padding-top: 5px;
+     font-family: sans-serif;
+     text-align: center;
+     border-radius: 5px;
+     max-width: 350px;
+ }
+
+ .card h1,
+ p,
+ h2,
+ h3 {
+     color: white;
+ }
+
+ h3 {
+     color: white;
+ }
+
+ button {
+     border-radius: 2px;
+     border-style: solid;
+     border-color: white;
+     border-width: thin;
+     color: white;
+     padding: 2px;
+     background-color: black;
+ }
+
+ .card .Buttons {
+     padding: 10px;
+ }
+
+ .page{
+    z-index: 6;
+    opacity: 1;
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    /*padding: 10px;*/
+}
