--- a/static/css/mc.css
+++ b/static/css/mc.css
@@ -5,14 +5,16 @@
     --container-bg: #fff;
     --link-color: #007BFF;
     --shadow-color: rgba(0, 0, 0, 0.1);
+    --border-color: #007BFF;
 }
 
 [data-theme="dark"] {
     --bg-color: #121212;
     --text-color: #f9f9f9;
     --container-bg: #1e1e1e;
-    --link-color: #4aa3ff;
+    --link-color: blueviolet;/*#4aa3ff;*/
     --shadow-color: rgba(0, 0, 0, 0.4);
+    --border-color: blueviolet;
 }
 
 body {
@@ -104,4 +106,12 @@ footer a:hover {
     margin: auto;
     width: 100%;
     /*padding: 10px;*/
+}
+
+.stats{
+    border-width: 4px;
+    border-color: var(--border-color);
+    border-style:outset;
+    padding: 15px;
+    border-radius: 2%;
 }
