--- a/static/css/mc.css
+++ b/static/css/mc.css
@@ -113,5 +113,28 @@ footer a:hover {
     border-color: var(--border-color);
     border-style:outset;
     padding: 15px;
-    border-radius: 2%;
+    border-radius: 1%;
+    font-size: larger;
+    text-align: center;
+}
+.containercontent{
+    max-width: 50%;
+}
+th, td{
+    padding-left: 25px;
+}
+th{
+    padding-bottom: 25px;
+    color: var(--link-color);
+}
+td{
+    padding-bottom: 10px;
+}
+table, th, td{
+    border-width: 4px;
+    border-color: var(--border-color);
+    border-style:outset;
+    border-radius: 1%;
+    padding: 15px;
+    border-collapse: collapse;
 }
