--- a/static/css/mc.css
+++ b/static/css/mc.css
@@ -1,4 +1,6 @@
-/* CSS for /MC, written by connor33341 */
+/* CSS for /MC, written by connor33341
+    MIT LISENCE
+*/
 :root {
     --bg-color: #f9f9f9;
     --text-color: #333;
